--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate_tailwind_npm",
+  "name": "tabs_tailwind",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
